<resources>
    <string name="app_name">WeNeighbors</string>
    <string name="server_client_id">129685831491-epi9fk1qhfn88quot41q04eien8s8l2f.apps.googleusercontent.com</string>
    <string name="facebook_app_id">343949462960555</string>
    <string name="fb_login_protocol_scheme">fb343949462960555</string>
    <string name="dea_title_0">View Pending Event</string>
    <string name="dea_title_1">View Upcoming Event</string>
    <string name="dea_title_2">View My Event</string>
    <string name="dea_menu_edit">Edit</string>
    <string name="dea_tab_accept">Accepted Guests</string>
    <string name="dea_tab_pending">Pending Guests</string>
    <string name="cea_title1">Create Event</string>
    <string name="cea_title2">Edit Event</string>
    <string name="cea_menu_save">Save</string>
    <string name="cea_et_location">Event Location</string>
    <string name="cea_et_name">Event Name</string>
    <string name="cea_et_date">Event Date</string>
    <string name="cea_tv_can_guest">Guest can invite community friends</string>
    <string name="cea_tv_private">Private event</string>
    <string name="cea_tv_invited">guest(s) added</string>
    <string name="cea_tv_friend_invited">friend(s) added</string>
    <string name="cea_btn_guest">Add Guest(s)</string>
    <string name="cea_btn_friend">Add Friend(s)</string>
    <string name="cea_error_date">Please choose future date and time</string>
    <string name="cea_val_name">Kindly enter the event name</string>
    <string name="cea_val_date">Kindly select the event date</string>
    <string name="cea_val_location">Kindly enter the event location</string>
    <string name="cea_val_guest">Kindly add guests</string>
    <string name="aag_title_1">Add Guest(s) to Event</string>
    <string name="aag_title_2">Share Event</string>
    <string name="aag_et_phone">Enter guest phone numbers here</string>
    <string name="aag_et_email">Enter guest emails here</string>
    <string name="aag_et_search">Search</string>
    <string name="aag_tv_add">ADD</string>
    <string name="aag_menu_add">Add</string>
    <string name="aag_menu_share">Share</string>
    <string name="aaf_title">Add Friend(s) to Event</string>
    <string name="aaf_tv_email_error_1">Please enter valid email address</string>
    <string name="aaf_tv_email_error_2">Email address already added</string>
    <string name="dd_setting">Setting</string>
    <string name="dd_try">Try Again</string>
    <string name="dd_yes">Yes</string>
    <string name="dd_no">No</string>
    <string name="dd_ok">OK</string>
    <string name="dd_msg_server">Sorry&#33;&#33;&#33; server is not responding or cannot reached&#44; please try again later&#46;</string>
    <string name="dd_msg_internet">Your INTERNET seems to be disabled&#44;\ndo you want to enable it&#63;</string>
    <string name="dd_msg_network">There is no network connection at the moment&#44; try again later&#46;</string>
    <string name="dd_msg_authentication">You are not authorize user to do this event&#46;</string>
    <string name="dd_msg_gps">Your GPS seems to be disabled&#44; do you want to enable it&#63;</string>
    <string name="dd_msg_connection">Oops&#33;&#33;&#33; Connection is slow&#44; please try again&#46;</string>
    <string name="dd_msg_time_out">Sorry&#33;&#33;&#33; Connection time out&#44; please try again&#46;</string>
    <string name="dd_msg_no_internet">No Internet Connection</string>
    <string name="dd_permission_msg">Required permissions are not granted&#44; ask again&#63;</string>
    <string name="dd_decline_msg">Are you sure you want to decline this event&#63;</string>
    <string name="dd_cancel_msg">Are you sure you want to cancel this event&#63;</string>
    <string name="dd_logout_msg">Are you sure you want to log out&#63;</string>
    <string name="dd_exit_msg">Are you sure you want to exit&#63;</string>
    <string name="dd_discard">Discard Changes&#63;</string>
    <string name="dd_info_pass">Password should be 8 characters or more.\n\nIt can be any combination of letters, numbers and symbols (ASCII characters).\n\nYou can\'t use a password that:\n\t&#8226; Is particularly week.\n\t\tExample: "password123"\n\t&#8226; You\'ve used before on your account\n\t&#8226; Starts or ends with a blank space\n\t&#8226; Same as your email</string>
    <string name="dd_info_email_verified">Action required: Please verify your email address from the email that we sent you during the sign-up process.</string>
    <string name="dd_btn_resend">Re-send verification email</string>
    <string name="dd_info_email_resend">We have sent a verification email to your registered email address. Please follow the instruction to verify your email address.</string>
    <string name="dd_btn_continue">Continue</string>
    <string name="dd_info_add">To ensure your community\'s privacy, address verification is required.</string>
    <string name="dd_btn_add_click">Click here to action</string>
    <string name="dd_info_add_verified">Your address proof verification is still pending on our end. Your concern has been acknowledged. We will notify you via email as soon as your address proof is verified.\n\nSorry for the inconvenience!</string>
    <string name="dd_info_img">Accepted formats: PDF/JPEG/PNG\nDocuments such as Utility bill, Local library card</string>
    <string name="dd_notification_success">Notification settings updated successfully</string>
    <string name="db_bnm_title_notifications">Notifications</string>
    <string name="db_bnm_title_event">Events</string>
    <string name="db_bnm_title_home">Home</string>
    <string name="db_bnm_title_chats">Chats</string>
    <string name="db_bnm_title_feedback">Send Feedback</string>
    <string name="db_bnm_title_profile">Profile</string>
    <string name="ef_tab_upcoming">Upcoming</string>
    <string name="ef_tab_pending">Pending</string>
    <string name="ef_tab_yours">Yours</string>
    <string name="ef_empty_ue_msg">No upcoming events found</string>
    <string name="ef_empty_pe_msg">No pending events found</string>
    <string name="ef_empty_ye_msg">No events created</string>
    <string name="ef_menu_create">Create</string>
    <string name="rv_iv_private">Private</string>
    <string name="rv_iv_share">Share</string>
    <string name="rv_iv_chat">Chat</string>
    <string name="rv_iv_edit">Edit</string>
    <string name="rv_iv_like">Like</string>
    <string name="rv_iv_more">More</string>
    <string name="rv_iv_decline">Decline</string>
    <string name="rv_iv_accept">Accept</string>
    <string name="rv_iv_cancel">Cancel</string>
    <string name="rv_header_tomorrow">TOMORROW</string>
    <string name="rv_header_today">TODAY</string>
    <string name="rv_header_later">LATER</string>
    <string name="event_success_msg">Event created successfully</string>
    <string name="event_update_msg">Event updated successfully</string>
    <string name="event_cancel_msg">Event cancelled successfully</string>
    <string name="event_guest_added">Guest added successfully</string>
    <string name="event_guest_exist">Guest already selected</string>
    <string name="event_success">This event has been added to your calender.</string>
    <string name="event_update">This event has been updated to your calender.</string>
    <string name="atc">Add to calendar</string>
    <string name="ha_footer">&#42; Privacy policies &#124; WeNeighbors&#8482;</string>
    <string name="ha_btn_login">Log In</string>
    <string name="ha_btn_create">Create Account</string>
    <string name="ha_tv_content_1">Best way to stay connected with community neighbors and management</string>
    <string name="ha_tv_content_2">See what\'s happening in your community right now</string>
    <string name="ha_tv_content_3">Create better and safer living environment together</string>
    <string name="ha_tv_content_4">Foster a strong sense of community </string>
    <string name="ha_tv_content_5">Private, secure and keep within your community</string>
    <string name="la_btn_fb">Sign-in with Facebook</string>
    <string name="la_btn_apple">Sign-in with Apple</string>
    <string name="la_btn_google">Sign-in with Google</string>
    <string name="la_tv_welcome">Welcome Back&#33;</string>
    <string name="la_ll_tv_or">OR USE YOUR OWN EMAIL</string>
    <string name="la_et_email">Email</string>
    <string name="la_et_pass">Password</string>
    <string name="la_tv_forgot">Forgot Password&#63;</string>
    <string name="la_btn_sign_in">Sign-In</string>
    <string name="la_tv_email_empty">Please enter email</string>
    <string name="la_tv_email_error">Please enter valid email</string>
    <string name="la_tv_pass_empty">Please enter password</string>
    <string name="la_tv_pass_error">Please enter valid password</string>
    <string name="la_til_helper_pass">Password should be 8 characters or more&#46;\nIt can be any combination of letters&#44; numbers and symbols&#46;\neg.Abcd@123</string>
    <string name="fa_et_email">Email</string>
    <string name="fa_et_empty">Please enter email</string>
    <string name="fa_et_error">Please enter valid email</string>
    <string name="fa_tv_forgot">Forgot your password&#63;</string>
    <string name="fa_tv">Please enter your registered email address&#44; and we will send you a link to reset your password&#46;</string>
    <string name="fa_btn_reset">Reset Password</string>
    <string name="fca_tv">Hi there&#33;\nLet us get started&#46;&#46;&#46;</string>
    <string name="fca_tv_invitation">Have an invitation code&#63;</string>
    <string name="fca_btn_fyc">Find your community</string>
    <string name="ca_tv_direct">Please enter your home address</string>
    <string name="ca_tv_zip">Please enter your zip code</string>
    <string name="ca_et_zip">Zip Code (Required)</string>
    <string name="ca_et_community">Enter community name here</string>
    <string name="ca_et_apart">Apartment/Unit (Optional)</string>
    <string name="ca_et_street">Street Name (Required)</string>
    <string name="ca_btn_next">Next</string>
    <string name="ca_et_street_error">Please enter valid street name</string>
    <string name="ia_tv">Please enter the invitation code that you\'ve received to join your community network.</string>
    <string name="ia_et">Invitation Code</string>
    <string name="ia_tv_error">Please enter invitation code</string>
    <string name="ia_btn_next">Next</string>
    <string name="cfa_tv">Great news&#33; Based on your home address, we\'ve found your community</string>
    <string name="cfa_tv_residents">residents from your community are already using our app</string>
    <string name="cfa_tv_events">upcoming events</string>
    <string name="cfa_btn_next">Next</string>
    <string name="sua_tv_1">We\'re exited for you to join your</string>
    <string name="sua_tv_2">community network&#46;</string>
    <string name="sua_btn_facebook">Sign-up with Facebook</string>
    <string name="sua_btn_apple">Sign-up with Apple</string>
    <string name="sua_btn_google">Sign-up with Google</string>
    <string name="sua_btn_su">Sign-Up</string>
    <string name="sua_et_full_name">Full Name</string>
    <string name="sua_tv_fname_error">Please enter full name</string>
    <string name="sua_tv_fname_val">Please enter valid full name</string>
    <string name="sua_et_email">Email</string>
    <string name="sua_tv_email_error">Please enter email address</string>
    <string name="sua_tv_email_val">Please enter valid email</string>
    <string name="sua_et_phone">Phone (Optional)</string>
    <string name="sua_et_pass">Password</string>
    <string name="sua_tv_pass_error">Please enter password</string>
    <string name="sua_tv_pass_val">Please enter valid password</string>
    <string name="back">Back</string>
    <string name="acp_tv">Create New Password</string>
    <string name="acp_et_new_pass">New Password</string>
    <string name="acp_btn_continue">Continue</string>
</resources>