<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.FindCommunityActivity">

    <ImageView
        android:id="@+id/fca_iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:padding="@dimen/et_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/fca_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:padding="@dimen/et_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_theme"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/fca_iv"
        android:layout_width="500px"
        android:layout_height="104px"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/talktiva_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/fa_tv_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/fca_tv"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fca_iv" />

    <Button
        android:id="@+id/fca_btn_fyc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_theme"
        android:text="@string/fca_btn_fyc"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/fca_tv_invitation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fa_tv_started" />

    <TextView
        android:id="@+id/fca_tv_invitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/fca_tv_invitation"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/normal_label_font_size"
        app:layout_constraintBottom_toTopOf="@id/fca_tv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fca_btn_fyc" />

    <TextView
        android:id="@+id/fca_tv_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ha_footer"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>