<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.InvitationActivity">

    <ImageView
        android:id="@+id/ia_iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:padding="@dimen/et_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info_grey"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/ia_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:padding="@dimen/et_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_theme"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/ia_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginTop="@dimen/logo_top"
        android:layout_marginEnd="@dimen/logo_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/talktiva_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ia_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ia_tv"
        android:textColor="@color/font"
        android:textSize="@dimen/tv_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ia_iv" />

    <TextView
        android:id="@+id/ia_tv_error"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/red"
        android:textSize="@dimen/tv_font"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ia_tv" />

    <EditText
        android:id="@+id/ia_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/ia_et"
        android:hint="@string/ia_et"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/grey"
        android:textSize="@dimen/tv_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ia_tv_error"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/ia_tv_val"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ia_tv_error"
        android:textColor="@color/red"
        android:textSize="@dimen/tv_font"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ia_et" />

    <Button
        android:id="@+id/ia_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_theme_1"
        android:padding="@dimen/et_padding"
        android:text="@string/ia_btn_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_font"
        app:layout_constraintBottom_toTopOf="@id/ia_tv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ia_tv_val" />

    <TextView
        android:id="@+id/ia_tv_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ha_footer"
        android:textColor="@color/font"
        android:textSize="@dimen/footer_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>