<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.ChangePasswordActivity">

    <ImageView
        android:id="@+id/acp_iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/rv_iv_cancel"
        android:focusable="true"
        android:padding="@dimen/et_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel_theme"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/acp_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/logo_margin"
        android:layout_marginTop="@dimen/logo_top"
        android:layout_marginEnd="@dimen/logo_margin"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/talktiva_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/acp_iv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:padding="@dimen/et_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info_grey"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/acp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/acp_tv"
        android:textColor="@color/font"
        android:textSize="@dimen/tv_title_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acp_iv" />

    <LinearLayout
        android:id="@+id/acp_ll_pass_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acp_tv">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/acp_til_pass_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            app:passwordToggleTintMode="src_atop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/acp_et_pass_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/acp_et_new_pass"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/grey"
                android:textSize="@dimen/tv_font" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/acp_iv_pass_info_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_help_wired"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/acp_tv_pass_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textColor="@color/red"
        android:textSize="@dimen/error_font_size"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acp_ll_pass_1" />

    <Button
        android:id="@+id/acp_btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_theme_1"
        android:text="@string/acp_btn_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/acp_tv_pass_1" />

    <TextView
        android:id="@+id/acp_tv_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/ha_footer"
        android:textColor="@color/font"
        android:textSize="@dimen/footer_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>